virtual-machines/lan_ips_router/iptables
# adapted from http://arstechnica.com/gadgets/2016/04/the-ars-guide-to-building-a-linux-router-from-scratch/

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# eth2 is DMZ interface, #eth1 is LAN interface
-A POSTROUTING -o eth2 -j MASQUERADE

# NAT pinhole: SSH from DMZ to LAN, for database tunnel
-A PREROUTING -p tcp -m tcp -i eth2 --dport 22 -j DNAT --to-destination 10.0.0.5:22
# SCP from DMZ to LAN, for backup
-A PREROUTING -p tcp -m tcp -i eth2 --dport 8022 -j DNAT --to-destination 10.0.0.6:22

COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Service rules
# Accept loopback
-A INPUT -i lo -j ACCEPT
# Allow ssh
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

# TESTING Allow existing and initiated connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Drop rest
-A INPUT -j DROP

# Forwarding rules

# forward packets along established/related connections
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# forward from LAN (eth1) to DMZ (eth2)
-A FORWARD -i eth1 -o eth2 -j ACCEPT

# allow traffic from our NAT pinhole
-A FORWARD -p tcp -d 10.0.0.5 --dport 22 -j ACCEPT
-A FORWARD -p tcp -d 10.0.0.6 --dport 22 -j ACCEPT

# drop all other forwarded traffic
-A FORWARD -j DROP

COMMIT
